fix: contact page title font weight and send button alignment

--- a/src/styles/space.css
+++ b/src/styles/space.css
@@ -27,6 +27,9 @@
     margin-top: 1em !important;
     margin-bottom: 1em !important;
 }
+.ml-0{
+    margin-left: 0px !important;
+}
 
 .mt-80{
     margin-top: 8em !important;
